...
            }
            if aRoute.routeTime < minTime {
                resultTag = "时间最短"
            }
            
            if index == 0 && strategy == .multipleAvoidCongestion {
                resultTag = "躲避拥堵"
            }
            if index == 0 && strategy == .multipleAvoidHighway {
                resultTag = "不走高速"
            }
            if index == 0 && strategy == .multipleAvoidCost {
                resultTag = "避免收费"
            }
            if index == 0 && resultTag.hasPrefix("方案") {
                resultTag = "推荐"
...
    
    func configSubview() {
        
        preferenceView = PreferenceView(frame: CGRect(x: 0, y: 5, width: view.bounds.width, height: 30))
        view.addSubview(preferenceView)
        
        let routeBtn = buttonForTitle("路径规划")
        routeBtn.frame = CGRect(x: (view.bounds.width - 80) / 2.0, y: 40, width: 80, height: 30)
        routeBtn.addTarget(self, action: #selector(self.routePlanAction(sender:)), for: .touchUpInside)
        
        view.addSubview(routeBtn)
        
        bottomInfoView = BottomInfoView(frame: CGRect(x: 0, y: view.bounds.height - 64 - bottomInfoViewHeight, width: view.bounds.width, height: bottomInfoViewHeight))
...
