...
    [self.trafficLightLabel setAdjustsFontSizeToFitWidth:YES];
    [self.trafficLightLabel setTextAlignment:NSTextAlignmentCenter];
    [self.trafficLightLabel setBaselineAdjustment:UIBaselineAdjustmentAlignCenters];
    
    self.startNaviButton = [UIButton buttonWithType:UIButtonTypeCustom];
    [self.startNaviButton setFrame:CGRectMake(10, 125, CGRectGetWidth(self.bounds) - 20, 40)];
    [self.startNaviButton setTitle:@"开始导航" forState:UIControlStateNormal];
    [self.startNaviButton.titleLabel setFont:[UIFont systemFontOfSize:24]];
    [self.startNaviButton setBackgroundColor:[UIColor colorWithRed:26/255.0 green:166/255.0 blue:239/255.0 alpha:1]];
    [self.startNaviButton addTarget:self action:@selector(startNaviButtonAction) forControlEvents:UIControlEventTouchUpInside];
    
    [self addSubview:self.trafficLightLabel];
    [self addSubview:self.startNaviButton];
...
